--- a/HovText/packages.config
+++ b/HovText/packages.config
@@ -1,12 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Costura.Fody" version="4.1.0" targetFramework="net48" />
-  <package id="Fody" version="6.3.0" targetFramework="net48" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.VersionCheckAnalyzer" version="3.3.2" targetFramework="net48" developmentDependency="true" />
-  <package id="Microsoft.CodeQuality.Analyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
-  <package id="Microsoft.NetCore.Analyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
-  <package id="Microsoft.NetFramework.Analyzers" version="3.3.2" targetFramework="net48" developmentDependency="true" />
+  <package id="Costura.Fody" version="5.7.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Fody" version="6.6.4" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="7.0.1" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="7.0.2" targetFramework="net48" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="NHotkey" version="2.1.0" targetFramework="net48" />
   <package id="NHotkey.WindowsForms" version="2.1.0" targetFramework="net48" />
 </packages>
