--- a/HovText/packages.config
+++ b/HovText/packages.config
@@ -2,7 +2,8 @@
 <packages>
   <package id="Costura.Fody" version="5.7.0" targetFramework="net48" developmentDependency="true" />
   <package id="Fody" version="6.8.0" targetFramework="net48" developmentDependency="true" />
-  <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="7.0.4" targetFramework="net48" developmentDependency="true" />
+  <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.NetAnalyzers" version="8.0.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="7.0.4" targetFramework="net48" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
   <package id="NHotkey" version="2.1.1" targetFramework="net48" />
